@@ -1,8 +1,16 @@
+Sat Mar 26 12:44:29 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
+
+	* regression/tests_pass/smc.s: Add.
+	* m_cpumem.c (getRhs): Follow API change.
+	(m_swp): Add warning about deprecation.
+	* m_cpu.c (dstlhsrhs, dstrhs, lhsrhs): Add bool return value.
+	* get.c (getShift): Invert first parameter.
+	(getRhs): Likewise.
+
 Sat Mar 12 16:25:23 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
 
 	* decode.c (oDecodeTable): Add SMC/SMI.
 	* m_cpuctrl.c, m_cpuctrl.h (m_smc): Add.
-	* regression/tests_pass/smc.s: Add.
 
 Thu Mar 10 00:45:15 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
 
